--- a/previews/PR450/examples/docs_4_rational_opt/index.html
+++ b/previews/PR450/examples/docs_4_rational_opt/index.html
@@ -34,17 +34,17 @@ LMO: FrankWolfe.ProbabilitySimplexOracle{Rational{BigInt}}
   Type     Iteration         Primal           Dual       Dual Gap           Time         It/sec
 -------------------------------------------------------------------------------------------------
      I             1   1.000000e+00  -1.000000e+00   2.000000e+00   0.000000e+00            Inf
-    FW            10   1.407407e-01  -1.407407e-01   2.814815e-01   4.574929e-01   2.185826e+01
-    FW            20   6.842105e-02  -6.842105e-02   1.368421e-01   4.587829e-01   4.359360e+01
-    FW            30   4.521073e-02  -4.521073e-02   9.042146e-02   4.601026e-01   6.520285e+01
-    FW            40   3.376068e-02  -3.376068e-02   6.752137e-02   4.616957e-01   8.663714e+01
-    FW            50   2.693878e-02  -2.693878e-02   5.387755e-02   4.632754e-01   1.079272e+02
-    FW            60   2.241055e-02  -2.241055e-02   4.482109e-02   4.650760e-01   1.290112e+02
-    FW            70   1.918565e-02  -1.918565e-02   3.837129e-02   4.671849e-01   1.498336e+02
-    FW            80   1.677215e-02  -1.677215e-02   3.354430e-02   4.694501e-01   1.704121e+02
-    FW            90   1.489804e-02  -1.489804e-02   2.979609e-02   4.719219e-01   1.907095e+02
-    FW           100   1.340067e-02  -1.340067e-02   2.680135e-02   4.745974e-01   2.107049e+02
-  Last           101   1.314422e-02  -1.236767e-02   2.551189e-02   4.755172e-01   2.124003e+02
+    FW            10   1.407407e-01  -1.407407e-01   2.814815e-01   4.491556e-01   2.226400e+01
+    FW            20   6.842105e-02  -6.842105e-02   1.368421e-01   4.504465e-01   4.440039e+01
+    FW            30   4.521073e-02  -4.521073e-02   9.042146e-02   4.516744e-01   6.641952e+01
+    FW            40   3.376068e-02  -3.376068e-02   6.752137e-02   4.530477e-01   8.829092e+01
+    FW            50   2.693878e-02  -2.693878e-02   5.387755e-02   4.545200e-01   1.100062e+02
+    FW            60   2.241055e-02  -2.241055e-02   4.482109e-02   4.561389e-01   1.315389e+02
+    FW            70   1.918565e-02  -1.918565e-02   3.837129e-02   4.579192e-01   1.528654e+02
+    FW            80   1.677215e-02  -1.677215e-02   3.354430e-02   4.597251e-01   1.740170e+02
+    FW            90   1.489804e-02  -1.489804e-02   2.979609e-02   4.616715e-01   1.949438e+02
+    FW           100   1.340067e-02  -1.340067e-02   2.680135e-02   4.637034e-01   2.156551e+02
+  Last           101   1.314422e-02  -1.236767e-02   2.551189e-02   4.644171e-01   2.174769e+02
 -------------------------------------------------------------------------------------------------
 
 Output type of solution: BigFloat</code></pre><p>Another possible step-size rule is <code>rationalshortstep</code> which computes the step size by minimizing the smoothness inequality as <span>$\gamma_t=\frac{\langle \nabla f(x_t),x_t-v_t\rangle}{2L||x_t-v_t||^2}$</span>. However, as this step size depends on an upper bound on the Lipschitz constant <span>$L$</span> as well as the inner product with the gradient <span>$\nabla f(x_t)$</span>, both have to be of a rational type.</p><pre><code class="language-julia hljs">@time x, v, primal, dual_gap, trajectory = FrankWolfe.frank_wolfe(
@@ -67,16 +67,16 @@ LMO: FrankWolfe.ProbabilitySimplexOracle{Rational{BigInt}}
   Type     Iteration         Primal           Dual       Dual Gap           Time         It/sec
 -------------------------------------------------------------------------------------------------
      I             1   1.000000e+00  -1.000000e+00   2.000000e+00   0.000000e+00            Inf
-    FW            10   1.000000e-01  -1.000000e-01   2.000000e-01   4.056995e-01   2.464878e+01
-    FW            20   5.000000e-02  -5.000000e-02   1.000000e-01   4.072690e-01   4.910759e+01
-    FW            30   3.333333e-02  -3.333333e-02   6.666667e-02   4.086959e-01   7.340422e+01
-    FW            40   2.500000e-02  -2.500000e-02   5.000000e-02   4.104283e-01   9.745917e+01
-    FW            50   2.000000e-02  -2.000000e-02   4.000000e-02   4.124106e-01   1.212384e+02
-    FW            60   1.666667e-02  -1.666667e-02   3.333333e-02   4.147544e-01   1.446639e+02
-    FW            70   1.428571e-02  -1.428571e-02   2.857143e-02   4.172903e-01   1.677489e+02
-    FW            80   1.250000e-02  -1.250000e-02   2.500000e-02   4.201271e-01   1.904186e+02
-    FW            90   1.111111e-02  -1.111111e-02   2.222222e-02   4.232482e-01   2.126412e+02
-    FW           100   1.000000e-02   1.000000e-02   1.889162e-78   4.266795e-01   2.343680e+02
-  Last           100   1.000000e-02   1.000000e-02   2.159042e-78   4.274116e-01   2.339665e+02
+    FW            10   1.000000e-01  -1.000000e-01   2.000000e-01   3.827289e-01   2.612816e+01
+    FW            20   5.000000e-02  -5.000000e-02   1.000000e-01   3.841178e-01   5.206736e+01
+    FW            30   3.333333e-02  -3.333333e-02   6.666667e-02   3.855145e-01   7.781808e+01
+    FW            40   2.500000e-02  -2.500000e-02   5.000000e-02   3.870483e-01   1.033463e+02
+    FW            50   2.000000e-02  -2.000000e-02   4.000000e-02   3.887348e-01   1.286224e+02
+    FW            60   1.666667e-02  -1.666667e-02   3.333333e-02   3.906152e-01   1.536038e+02
+    FW            70   1.428571e-02  -1.428571e-02   2.857143e-02   3.926146e-01   1.782919e+02
+    FW            80   1.250000e-02  -1.250000e-02   2.500000e-02   3.947513e-01   2.026592e+02
+    FW            90   1.111111e-02  -1.111111e-02   2.222222e-02   3.970632e-01   2.266642e+02
+    FW           100   1.000000e-02   1.000000e-02   1.889162e-78   3.996743e-01   2.502037e+02
+  Last           100   1.000000e-02   1.000000e-02   2.159042e-78   4.002724e-01   2.498299e+02
 -------------------------------------------------------------------------------------------------
-  0.667565 seconds (1.65 M allocations: 92.644 MiB, 1.54% compilation time)</code></pre><p>Note: at the last step, we exactly close the gap, finding the solution 1//n * ones(n)</p><hr/><p><em>This page was generated using <a href="https://github.com/fredrikekre/Literate.jl">Literate.jl</a>.</em></p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../docs_3_matrix_completion/">« Matrix Completion</a><a class="docs-footer-nextpage" href="../docs_5_blended_cg/">Blended Conditional Gradients »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.25 on <span class="colophon-date" title="Monday 4 December 2023 13:12">Monday 4 December 2023</span>. Using Julia version 1.6.7.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+  0.685659 seconds (1.65 M allocations: 92.740 MiB, 6.23% gc time, 1.52% compilation time)</code></pre><p>Note: at the last step, we exactly close the gap, finding the solution 1//n * ones(n)</p><hr/><p><em>This page was generated using <a href="https://github.com/fredrikekre/Literate.jl">Literate.jl</a>.</em></p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../docs_3_matrix_completion/">« Matrix Completion</a><a class="docs-footer-nextpage" href="../docs_5_blended_cg/">Blended Conditional Gradients »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.25 on <span class="colophon-date" title="Monday 4 December 2023 14:28">Monday 4 December 2023</span>. Using Julia version 1.6.7.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
