--- a/dev/examples/docs_4_rational_opt/index.html
+++ b/dev/examples/docs_4_rational_opt/index.html
@@ -34,17 +34,17 @@ LMO: FrankWolfe.ProbabilitySimplexOracle{Rational{BigInt}}
   Type     Iteration         Primal           Dual       Dual Gap           Time         It/sec
 -------------------------------------------------------------------------------------------------
      I             1   1.000000e+00  -1.000000e+00   2.000000e+00   0.000000e+00            Inf
-    FW            10   1.407407e-01  -1.407407e-01   2.814815e-01   5.134104e-01   1.947759e+01
-    FW            20   6.842105e-02  -6.842105e-02   1.368421e-01   5.147440e-01   3.885427e+01
-    FW            30   4.521073e-02  -4.521073e-02   9.042146e-02   5.160542e-01   5.813343e+01
-    FW            40   3.376068e-02  -3.376068e-02   6.752137e-02   5.175432e-01   7.728824e+01
-    FW            50   2.693878e-02  -2.693878e-02   5.387755e-02   5.190483e-01   9.633015e+01
-    FW            60   2.241055e-02  -2.241055e-02   4.482109e-02   5.206484e-01   1.152409e+02
-    FW            70   1.918565e-02  -1.918565e-02   3.837129e-02   5.224220e-01   1.339913e+02
-    FW            80   1.677215e-02  -1.677215e-02   3.354430e-02   5.242365e-01   1.526029e+02
-    FW            90   1.489804e-02  -1.489804e-02   2.979609e-02   5.261898e-01   1.710410e+02
-    FW           100   1.340067e-02  -1.340067e-02   2.680135e-02   5.282359e-01   1.893094e+02
-  Last           101   1.314422e-02  -1.236767e-02   2.551189e-02   5.289518e-01   1.909437e+02
+    FW            10   1.407407e-01  -1.407407e-01   2.814815e-01   4.637814e-01   2.156188e+01
+    FW            20   6.842105e-02  -6.842105e-02   1.368421e-01   4.650804e-01   4.300332e+01
+    FW            30   4.521073e-02  -4.521073e-02   9.042146e-02   4.663215e-01   6.433330e+01
+    FW            40   3.376068e-02  -3.376068e-02   6.752137e-02   4.677295e-01   8.551952e+01
+    FW            50   2.693878e-02  -2.693878e-02   5.387755e-02   4.692214e-01   1.065595e+02
+    FW            60   2.241055e-02  -2.241055e-02   4.482109e-02   4.708909e-01   1.274180e+02
+    FW            70   1.918565e-02  -1.918565e-02   3.837129e-02   4.726936e-01   1.480875e+02
+    FW            80   1.677215e-02  -1.677215e-02   3.354430e-02   4.745505e-01   1.685806e+02
+    FW            90   1.489804e-02  -1.489804e-02   2.979609e-02   4.765484e-01   1.888580e+02
+    FW           100   1.340067e-02  -1.340067e-02   2.680135e-02   4.786460e-01   2.089227e+02
+  Last           101   1.314422e-02  -1.236767e-02   2.551189e-02   4.793878e-01   2.106854e+02
 -------------------------------------------------------------------------------------------------
 
 Output type of solution: BigFloat</code></pre><p>Another possible step-size rule is <code>rationalshortstep</code> which computes the step size by minimizing the smoothness inequality as <span>$\gamma_t=\frac{\langle \nabla f(x_t),x_t-v_t\rangle}{2L||x_t-v_t||^2}$</span>. However, as this step size depends on an upper bound on the Lipschitz constant <span>$L$</span> as well as the inner product with the gradient <span>$\nabla f(x_t)$</span>, both have to be of a rational type.</p><pre><code class="language-julia hljs">@time x, v, primal, dual_gap, trajectory = FrankWolfe.frank_wolfe(
@@ -67,16 +67,16 @@ LMO: FrankWolfe.ProbabilitySimplexOracle{Rational{BigInt}}
   Type     Iteration         Primal           Dual       Dual Gap           Time         It/sec
 -------------------------------------------------------------------------------------------------
      I             1   1.000000e+00  -1.000000e+00   2.000000e+00   0.000000e+00            Inf
-    FW            10   1.000000e-01  -1.000000e-01   2.000000e-01   3.887384e-01   2.572424e+01
-    FW            20   5.000000e-02  -5.000000e-02   1.000000e-01   3.903738e-01   5.123295e+01
-    FW            30   3.333333e-02  -3.333333e-02   6.666667e-02   3.914512e-01   7.663790e+01
-    FW            40   2.500000e-02  -2.500000e-02   5.000000e-02   3.926562e-01   1.018703e+02
-    FW            50   2.000000e-02  -2.000000e-02   4.000000e-02   3.940627e-01   1.268833e+02
-    FW            60   1.666667e-02  -1.666667e-02   3.333333e-02   3.956854e-01   1.516356e+02
-    FW            70   1.428571e-02  -1.428571e-02   2.857143e-02   3.974648e-01   1.761162e+02
-    FW            80   1.250000e-02  -1.250000e-02   2.500000e-02   3.994801e-01   2.002603e+02
-    FW            90   1.111111e-02  -1.111111e-02   2.222222e-02   4.016424e-01   2.240799e+02
-    FW           100   1.000000e-02   1.000000e-02   1.889162e-78   4.040524e-01   2.474927e+02
-  Last           100   1.000000e-02   1.000000e-02   2.159042e-78   4.046078e-01   2.471529e+02
+    FW            10   1.000000e-01  -1.000000e-01   2.000000e-01   4.475696e-01   2.234289e+01
+    FW            20   5.000000e-02  -5.000000e-02   1.000000e-01   4.489639e-01   4.454701e+01
+    FW            30   3.333333e-02  -3.333333e-02   6.666667e-02   4.504019e-01   6.660718e+01
+    FW            40   2.500000e-02  -2.500000e-02   5.000000e-02   4.519302e-01   8.850925e+01
+    FW            50   2.000000e-02  -2.000000e-02   4.000000e-02   4.536195e-01   1.102245e+02
+    FW            60   1.666667e-02  -1.666667e-02   3.333333e-02   4.554811e-01   1.317289e+02
+    FW            70   1.428571e-02  -1.428571e-02   2.857143e-02   4.575046e-01   1.530039e+02
+    FW            80   1.250000e-02  -1.250000e-02   2.500000e-02   4.597557e-01   1.740054e+02
+    FW            90   1.111111e-02  -1.111111e-02   2.222222e-02   4.620999e-01   1.947631e+02
+    FW           100   1.000000e-02   1.000000e-02   1.889162e-78   4.646736e-01   2.152048e+02
+  Last           100   1.000000e-02   1.000000e-02   2.159042e-78   4.652788e-01   2.149249e+02
 -------------------------------------------------------------------------------------------------
-  0.642314 seconds (1.65 M allocations: 92.717 MiB, 1.72% compilation time)</code></pre><p>Note: at the last step, we exactly close the gap, finding the solution 1//n * ones(n)</p><hr/><p><em>This page was generated using <a href="https://github.com/fredrikekre/Literate.jl">Literate.jl</a>.</em></p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../docs_3_matrix_completion/">« Matrix Completion</a><a class="docs-footer-nextpage" href="../docs_5_blended_cg/">Blended Conditional Gradients »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.25 on <span class="colophon-date" title="Monday 15 January 2024 16:32">Monday 15 January 2024</span>. Using Julia version 1.6.7.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+  0.708135 seconds (1.65 M allocations: 92.725 MiB, 6.62% gc time, 1.51% compilation time)</code></pre><p>Note: at the last step, we exactly close the gap, finding the solution 1//n * ones(n)</p><hr/><p><em>This page was generated using <a href="https://github.com/fredrikekre/Literate.jl">Literate.jl</a>.</em></p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../docs_3_matrix_completion/">« Matrix Completion</a><a class="docs-footer-nextpage" href="../docs_5_blended_cg/">Blended Conditional Gradients »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.25 on <span class="colophon-date" title="Friday 2 February 2024 15:53">Friday 2 February 2024</span>. Using Julia version 1.6.7.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
